Journal id chanfge
delete space

--- a/original/index.html
+++ b/original/index.html
@@ -15,9 +15,9 @@
  <!-- <header></header> -->
  
 <div id="top">
-  <div class="top-wrapper ">
+  <div class="top-wrapper">
      <div class="container">
-	  <h1><a href="#top-wrapper" class="top-logo">TokiMina<br>Life</a></h1>
+	  <h1><a href="#top" class="top-logo">TokiMina<br>Life</a></h1>
 	    <div class="contents">
          <ul>
 		  <li><a href="#Profile">Profile</a></li>
@@ -49,7 +49,7 @@
  </div>
 </div>
 <!-- ここからJournal/Life -->
-<div id="Journal ">
+<div id="Journal">
   <div class="journal-wrapper ">
      <h2>Journal</h2>
 	 <div class="journal-contents">
