parallax.min add
parallax.min add

--- a/original/index.html
+++ b/original/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
   
@@ -15,7 +14,8 @@
  <!-- <header></header> -->
  
 <div id="top">
-  <div class="top-wrapper">
+  <div class="top-wrapper parallax-window" data-parallax="scroll" 
+  data-image-src="img/TOP_pexels-photo-185933.jpeg">
      <div class="container">
 	  <h1><a href="#top" class="top-logo">TokiMina<br>Life</a></h1>
 	    <div class="contents">
@@ -29,10 +29,11 @@
        </div>
     </div>    
    </div>
-<!-- </div> -->
+
+
 <!-- ここからprofile -->
 <div id="Profile">
- <div class="prf-wrapper ">
+ <div class="prf-wrapper">
   <h2>Profile</h2>
  　   
  
@@ -48,9 +49,15 @@
   
  </div>
 </div>
+
+<div class="img parallax-window" data-parallax="scroll" data-image-src="img/TOP_pexels-photo-185933.jpeg">
+	
+</div>
+
+
 <!-- ここからJournal/Life -->
 <div id="Journal">
-  <div class="journal-wrapper ">
+  <div class="journal-wrapper">
      <h2>Journal</h2>
 	 <div class="journal-contents">
 		
@@ -78,6 +85,12 @@
  </div>
 
 </div>
+
+
+<div class="img parallax-window" data-parallax="scroll" data-image-src="img/TOP_pexels-photo-185933.jpeg">
+	
+</div>
+
 
 <!-- ここからWorks -->
 
@@ -158,8 +171,8 @@
 	</div>
 </footer>
 
-<!-- <script src="js/parallax.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="js/parallax.min.js"></script>
 
 </body>
-</html>
+</html>	
